cluster/apps/media-server/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media-server
  labels:
    app.kubernetes.io/name: sonarr
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "Unsupported for this app."
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsUser: 108989
        runAsGroup: 109030
        fsGroup: 109030
        seLinuxOptions:
          level: "s0:c123,c456"
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.15
          imagePullPolicy: IfNotPresent
          ports:
            - name: sonarr-http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: sonarr-data
              mountPath: /config
            - name: media
              mountPath: /media
          resources:
            limits:
              cpu: 2000m
              memory: 500Mi
            requests:
              cpu: 500m
              memory: 500Mi
          livenessProbe:
            exec:
              command:
              - /usr/bin/env
              - bash
              - -c
              - curl --fail localhost:8989/api/v3/system/status?apiKey=`IFS=\> && while read -d
                \< E C; do if [[ $E = "ApiKey" ]]; then echo $C; fi; done < /config/config.xml`
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          securityContext:
            runAsNonRoot: true
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
      volumes:
        - name: sonarr-configmap
          configMap:
            name: sonarr-configmap
            defaultMode: 0777
        - name: sonarr-data
          emptyDir:
            sizeLimit: 1Gi
        - name: sonarr-secrets
          secret:
            secretName: sonarr-secrets
        - name: media
          persistentVolumeClaim:
            claimName: media
